[package]
name = "embedded-sdmmc"
version = "0.3.0"
authors = ["Jonathan 'theJPster' Pallant <github@thejpster.org.uk>"]
description = "A basic SD/MMC driver for Embedded Rust."
keywords = ["sdcard", "mmc", "embedded", "fat32"]
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/thejpster/embedded-sdmmc-rs"
edition = "2018"
readme = "README.md"
autoexamples = false

[dependencies]
embedded-hal = "0.2.3"
log = { version = "0.4", default-features = false, optional = true }
defmt = { version = "0.3", optional = true }
bitflags = "1.3"

[dev-dependencies]
hex-literal = "0.3"
env_logger = "0.8"

[features]
defmt-log = [ "defmt" ]
refcell-blockdevice = [ ]
lfn = [ ]
default = [ "log", "refcell-blockdevice", "lfn" ]
